# vcgc

./: .gitignore  README.md
client/: compile.cmd  dark_mode.py  network_manager.py  pyproject.toml  vdata.yml
client/ui/: login_dialog.py  main_window.py  menu_list.py  options_dialog.py  registration_dialog.py  server_manager.py
server/: __main__.py  cli.py  main.py  pyproject.toml
server/auth/: auth.py
server/core/: server.py
server/game_utils/: __init__.py  action_execution_mixin.py  action_set_creation_mixin.py  action_set_system_mixin.py  action_visibility_mixin.py  actions.py  bot_helper.py  dice_game_mixin.py  duration_estimate_mixin.py  event_handling_mixin.py  game_communication_mixin.py  game_prediction_mixin.py  game_result_mixin.py  game_scores_mixin.py  game_sound_mixin.py  lobby_actions_mixin.py  menu_management_mixin.py  options.py  poker_actions.py  poker_betting.py  poker_evaluator.py  poker_keybinds.py  poker_log.py  poker_payout.py  poker_pot.py  poker_showdown.py  poker_state.py  poker_table.py  poker_timer.py  teams.py  turn_management_mixin.py
server/games/: __init__.py  base.py
server/messages/: localization.py
server/network/: websocket_server.py
server/persistence/: database.py
server/plans/: crazyeights.md  nested_menu_prompt.txt  poker.md  turn_system.txt
server/tests/: test_actions_menu.py  test_active_tables_menu.py  test_ageofheroes.py  test_crazyeights.py  test_dice_action_id.py  test_fivecarddraw.py  test_holdem.py  test_leftrightcenter.py  test_milebymile.py  test_ninetynine.py  test_online_users.py  test_pig.py  (+3 more)
(+112 files in other folders)
